매핑 기능 추가 및 db테이블 변경